<resources>
    <string name="app_name">Examiner</string>
    <string name="txtWelcomeToExaminer">Welcome to</string>
    <string name="Login">Log in</string>
    <string name="LogOut">Log out</string>
    <string name="Register">Register</string>
    <string name="SignIn">or sign in with:</string>
    <string name="createAcc">Create Account</string>
    <string name="FirstLast">First and Last name:</string>
    <string name="email">Write your email:</string>
    <string name="password">Add your password:</string>
    <string name="confirm">Confirm your password:</string>
    <string name="save">Save</string>
    <string name="yourPass">Your password</string>
    <string name="predmet1">Мобилни платформи и програмирање</string>
    <string name="predmet2">Управување со ИКТ проекти</string>
    <string name="predmet3">Е-влада</string>
    <string name="predmet4">Бизнис и менаџмент</string>
    <string name="areyouready">Дали сте спремни?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Predmet 1</string>
</resources>