<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@drawable/background_register"
    android:scaleType="centerCrop"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="164dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:fontFamily="@font/jacques_francois"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="259dp"
        android:layout_height="39dp"
        android:fontFamily="@font/jacques_francois"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/writeYourEmail"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/dark_purple"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:layout_width="237dp"
        android:layout_height="39dp"
        android:fontFamily="@font/jacques_francois"
        android:text="@string/yourPass"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/writeYourPassword"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/dark_purple"
        android:textSize="20dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <Button
        android:id="@+id/btnGoToDaschboardActivity"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightgray"
        android:fontFamily="@font/jacques_francois"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>